--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
       "psr-4": {
-        "nigromante\\EzSite\\": "src/EzSite/"
+        "nigromante\\": "nigromante/"
 
       }
     }
